# basic_next_best_view

./: CMakeLists.txt  README.txt  package.xml
action/: Execute.action
msg/: BasicRequest.msg  BasicResponse.msg  VoxelFilter.msg
src/: RayTracer.cpp  RayTracer.h  basic_next_best_view.cpp  basic_next_best_view.h  basic_viewpoint_evaluator.cpp  basic_viewpoint_evaluator.h
src/impl/: RayTracer.hpp
